# PCore-Compiler-1.4.C

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  output.ll
docs/: intermediate_representation.md  memory.md  syntax.md
include/: AbstractSyntaxTree.h  CodeGenerator.h  Compiler.h  IRCodeGenerator.h  IntermediateRepresentation.h  Parser.h  Tokenizer.h  Visitor.h
include/ast/: AbstractSyntaxTree.h
resources/: pi.pc  quadratic.pc  sin.pc  test.pc
src/: AbstractSyntaxTree.cpp  CodeGenerator.cpp  Compiler.cpp  IRCodeGenerator.cpp  IntermediateRepresentation.cpp  Parser.cpp  Tokenizer.cpp  main.cpp
src/ast/: AbstractSyntaxTree.cpp
